[package]
name = "intentsource_substream"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "intentsource_substream"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5"
substreams-entity-change = "1.3"
substreams-ethereum = "0.9"
hex-literal = "0.3"
hex = "0.4"
prost = "0.11"
prost-types = "0.11"
bigdecimal = "0.3"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
substreams-ethereum = "0.9"
anyhow = "1"
prost-build = "0.11"